@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.beryx.jlink' version '2.24.1'
+    id 'org.beryx.runtime' version '1.12.5'
 }
 
 application {
@@ -42,12 +42,50 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml' ]
 }
 
-jlink {
-   launcher{
-        name = 'ebrpf'
-        jvmArgs = args
-   }
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    targetPlatform("lin") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36_openj9-0.25.0/OpenJDK16-jdk_x64_linux_openj9_16_36_openj9-0.25.0.tar.gz")
+    }
+    targetPlatform("mac") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36_openj9-0.25.0/OpenJDK16-jdk_x64_mac_openj9_16_36_openj9-0.25.0.tar.gz") {
+            downloadDir = "$buildDir/myMac"
+            archiveName = "my-mac-jdk"
+            archiveExtension = "tar.gz"
+            pathToHome = "jdk-15.0.2+7/Contents/Home"
+            overwrite = true
+        }
+    }
+    targetPlatform("win") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36_openj9-0.25.0/OpenJDK16-jdk_x64_windows_openj9_16_36_openj9-0.25.0.zip")
+    }
+
+
+    launcher {
+        noConsole = true
+    }
+    jpackage {
+        targetPlatformName = "mac"
+
+        def currentOs = org.gradle.internal.os.OperatingSystem.current()
+        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
+        imageOptions += ['--icon', "src/main/resources/hellofx.$imgType"]
+        installerOptions += ['--resource-dir', "src/main/resources"]
+        installerOptions += ['--vendor', 'ARPF Indore']
+
+        if(currentOs.windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+        else if (currentOs.linux) {
+            installerOptions += ['--linux-package-name', 'hellofx','--linux-shortcut']
+        }
+        else if (currentOs.macOsX) {
+            installerOptions += ['--mac-package-name', 'hellofx']
+        }
+    }
 }
+
 
 def args = [
         "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
@@ -84,6 +122,8 @@ def args = [
         "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
         "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
         "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+        "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
 
         "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
         "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
